WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
172323
Data interaction conclusion snapshot has too much margin
https://bugs.webkit.org/show_bug.cgi?id=172323
Summary
Data interaction conclusion snapshot has too much margin
Tim Horton
Reported
2017-05-18 15:53:14 PDT
Data interaction conclusion snapshot has too much margin
Attachments
Patch
(2.17 KB, patch)
2017-05-18 15:53 PDT
,
Tim Horton
bdakin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2017-05-18 15:53:26 PDT
Created
attachment 310566
[details]
Patch
Tim Horton
Comment 2
2017-09-03 01:26:49 PDT
https://trac.webkit.org/changeset/217080/webkit
Radar WebKit Bug Importer
Comment 3
2017-09-27 13:01:46 PDT
<
rdar://problem/34694506
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug