Data interaction conclusion snapshot has too much margin https://bugs.webkit.org/show_bug.cgi?id=172323 <rdar://problem/32283772>

Reviewed by Beth Dakin.

* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::didConcludeEditDataInteraction):
Disable the default TextIndicator margin.


Canonical link: https://commits.webkit.org/189222@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@217080 268f45cc-cd09-0410-ab3c-d52691b4dbfc